# hypr-presto

./: Cargo.toml  README.md  README_JP.md  build.rs  config.toml  window.blp
.cache/clangd/index/: main.c.C8AE1BEA68900FEF.idx  toml.c.A0B198102AE5737C.idx  toml.h.4440D2BA7CA907BC.idx
src/: main.rs  style.css
